# proyecto-big-data

./: .env.example  README.md  docker-compose.yml  pyproject.toml
docker/jupyter-spark/: Dockerfile
notebooks/EA1_fundamentos/: 01_introduccion_spark.ipynb  02_rdds_basico.ipynb
notebooks/EA2_etl_batch/: 01_ingesta_datos.ipynb  02_transformacion_limpieza.ipynb  04_hive_metastore.ipynb  05_machine_learning_spark.ipynb  06_visualizacion_datos.ipynb
notebooks/extras/: actividad_vuelos.ipynb
notebooks_resueltos/EA1_fundamentos/: 01_introduccion_spark.ipynb  02_rdds_basico.ipynb
notebooks_resueltos/EA2_etl_batch/: 01_ingesta_datos.ipynb  02_transformacion_limpieza.ipynb  04_hive_metastore.ipynb  05_machine_learning_spark.ipynb  06_visualizacion_datos.ipynb
notebooks_resueltos/extras/: actividad_vuelos.ipynb
scripts/: verificar_entorno.py
